<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/others"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_bg"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/nav_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/nav_share"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_go"
                app:drawableStartCompat="@drawable/ic_share" />

            <TextView
                android:id="@+id/nav_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/nav_rate"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_go"
                app:drawableStartCompat="@drawable/ic_rate" />

            <TextView
                android:id="@+id/nav_offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/nav_offer"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_go"
                app:drawableStartCompat="@drawable/ic_message" />

            <TextView
                android:id="@+id/nav_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/nav_apps"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_go"
                app:drawableStartCompat="@drawable/ic_apps" />

            <TextView
                android:id="@+id/nav_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/nav_about"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_go"
                app:drawableStartCompat="@drawable/ic_info" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>