<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_blue"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/dayNight"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="11dp"
                    android:src="@drawable/ic_daynight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_bg"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="10dp"
                    android:freezesText="false"
                    android:hint="@string/search_articles_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColorHint="#787878"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/keyboard"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_keyboard" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/letterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/letterGh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rb_lang_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/letter_gh"
                    android:textColor="#787878"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/letterI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rb_lang_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/letter_i"
                    android:textColor="#787878"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/letterQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rb_lang_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/letter_q"
                    android:textColor="#787878"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/letterU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rb_lang_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/letter_u"
                    android:textColor="#787878"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/letterH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rb_lang_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/letter_h"
                    android:textColor="#787878"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/letterJ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rb_lang_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/letter_j"
                    android:textColor="#787878"
                    android:textSize="12sp" />

            </LinearLayout>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:background="@drawable/tab_background"
                android:orientation="horizontal" />

        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:itemCount="12"
        tools:listitem="@layout/item_layout">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/forad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>